--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   # Infrastructure Services
@@ -33,31 +33,26 @@ services:
     networks:
       - microservices-network
     healthcheck:
-      test:
-        [
-          "CMD",
-          "kafka-topics",
-          "--bootstrap-server",
-          "localhost:9092",
-          "--list",
-        ]
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   kafka-setup:
-    image: confluentinc/cp-kafka:latest
+    image: node:18-alpine
     depends_on:
       kafka:
         condition: service_healthy
     volumes:
-      - ./kafka-setup:/scripts
+      - ./kafka-setup:/app
+    working_dir: /app
     command: [
       "sh", "-c", 
       "echo 'Waiting for Kafka to be ready...' && 
        sleep 20 && 
-       npm install kafkajs && 
-       node /scripts/topics.ts"
+       npm install && 
+       npm run build && 
+       npm start"
     ]
     networks:
       - microservices-network
