--- a/user-service/package.json
+++ b/user-service/package.json
@@ -1,41 +1,47 @@
 {
   "name": "user-service",
   "version": "1.0.0",
-  "description": "User Authentication microservice",
+  "description": "User authentication and management service",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathPattern=tests/.*\\.test\\.ts$ --testPathIgnorePatterns=tests/integration",
+    "test:integration": "jest --config=jest.integration.config.js",
     "lint": "eslint src/**/*.ts",
     "clean": "rimraf dist"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
-    "uuid": "^9.0.1",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/express": "5.0.0",
     "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.0",
+    "@types/node": "22.13.10",
     "@types/pg": "^8.10.9",
+    "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
+    "@types/cors": "^2.8.17",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
