--- a/package.json
+++ b/package.json
@@ -1,40 +1,63 @@
 {
-  "name": "api-gateway",
+  "name": "microservices-architecture",
   "version": "1.0.0",
-  "description": "API Gateway for the microservices architecture",
-  "main": "dist/index.js",
+  "description": "Microservices architecture with TypeScript, PostgreSQL and Kafka",
+  "private": true,
+  "workspaces": [
+    "shared",
+    "api-gateway",
+    "payments-service",
+    "sales-service",
+    "purchasing-service",
+    "inventory-service",
+    "customer-activity-service",
+    "user-service"
+  ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "clean": "rimraf dist"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "winston": "^3.11.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "http-proxy-middleware": "^2.0.6",
-    "jsonwebtoken": "^9.0.2",
-    "express-rate-limit": "^7.1.4",
-    "express-validator": "^7.0.1",
-    "uuid": "^9.0.1"
+    "clean": "npm run clean:dist && npm run clean:modules",
+    "clean:dist": "rimraf */dist",
+    "clean:modules": "rimraf */node_modules",
+    "build": "npm run build:shared && lerna run build --concurrency=1 --ignore=shared",
+    "build:shared": "cd shared && npm run build",
+    "start": "lerna run start",
+    "start:dev": "lerna run start:dev --parallel",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
+    // "prepare": "husky install",
+    "docker:up": "docker-compose up -d",
+    "docker:build": "docker-compose build",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "deploy": "node scripts/nomad-helpers.js",
+    "deploy:all": "node scripts/nomad-helpers.js --all",
+    "deploy:infra": "bash scripts/deploy.sh --infrastructure",
+    "deploy:changed": "node scripts/nomad-helpers.js",
+    "deploy:tag": "node scripts/nomad-helpers.js --tag"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.0",
-    "@types/cors": "^2.8.17",
-    "@types/uuid": "^9.0.7",
-    "@types/jsonwebtoken": "^9.0.5",
-    "eslint": "^8.54.0",
-    "jest": "^29.7.0",
+    "@types/node": "^20.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^8.0.3",
+    "lerna": "^8.0.1",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
