--- a/shared/package.json
+++ b/shared/package.json
@@ -1,31 +1,27 @@
 {
   "name": "shared",
   "version": "1.0.0",
-  "description": "Shared libraries and utilities for microservices",
+  "description": "Shared utilities and libraries for microservices",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint src/**/*.ts",
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "kafkajs": "^2.2.4",
-    "pg": "^8.11.3",
-    "winston": "^3.11.0",
-    "uuid": "^9.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.10.0",
-    "@types/pg": "^8.10.9",
-    "@types/uuid": "^9.0.7",
-    "@types/bcrypt": "^5.0.2",
-    "@types/json-schema": "^7.0.15",
-    "@types/minimatch": "^5.1.2",
-    "@types/minimist": "^1.2.5",
     "eslint": "^8.54.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
