--- a/user-service/package.json
+++ b/user-service/package.json
@@ -17,19 +17,20 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "pg": "^8.11.3",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.5",
@@ -37,7 +38,6 @@
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
-    "@types/cors": "^2.8.17",
     "eslint": "^8.54.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
